--- a/Guess_the_number/index.html
+++ b/Guess_the_number/index.html
@@ -12,7 +12,7 @@
     function check()
     {
         var d3=d1.value
-        if(score < 0) {
+        if(score == 0) {
           alert("You Loss!.. The Numberr to be guessed was : " + d4) 
         }
         else {
